# whatsapp-archive

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
src/: error.rs  file_index.rs  file_info.rs  filter.rs  lib.rs
