[package]
name = "waa"
version = "0.1.0"
authors = ["Francis Russell <francis@unchartedbackwaters.co.uk>"]
edition = "2021"

[dependencies]
bytefmt = "0.1.7"
chrono = "0.4.7"
clap = { features = [ "derive" ], version = "4.0.22" }
filetime = "0.2.6"
log = "0.4"
parse_duration = "2.1.1"
regex = "1.7"
thiserror = "1.0.37"
